--- a/tox.ini
+++ b/tox.ini
@@ -12,17 +12,20 @@ passenv =
   TRAVIS
   TRAVIS_*
 
+whitelist_externals =
+  sh
+  rm
+
 deps =
     pytest
     pytest-asyncio
-    pytest-cov
+    coverage
 
 commands =
-    pytest {posargs} \
-        -m 'not django' \
-        --cov={envsitepackagesdir}/aiohttp_json_rpc \
-        --doctest-ignore-import-errors \
-        {envsitepackagesdir}/aiohttp_json_rpc
+    - coverage erase
+    - rm -rf htmlcov/{envname}
+    sh -c "coverage run --source={envsitepackagesdir}/aiohttp_json_rpc `which pytest` -m 'not django'"
+    - coverage html -d htmlcov/{envname}
 
 [testenv:django]
 setenv =
@@ -38,9 +41,10 @@ deps =
     {toxinidir}/tests/django_project
 
 commands =
-    pytest {posargs} \
-        --cov={envsitepackagesdir}/aiohttp_json_rpc \
-        {envsitepackagesdir}/aiohttp_json_rpc
+    - coverage erase
+    - rm -rf htmlcov/{envname}
+    sh -c "coverage run --source={envsitepackagesdir}/aiohttp_json_rpc `which pytest`"
+    - coverage html -d htmlcov/{envname}
 
 [testenv:django18]
 setenv = {[testenv:django]setenv}
