--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 addopts = tests -v --tb=long
 log_format = %(levelname)-8s %(name)-30s [%(asctime)s.%(msecs)03d] %(message)s
 log_date_format = %H:%M:%S
+log_level = DEBUG
